# Shellforge

./: Cargo.toml  README.md
formats/: C#-bash-i.sf  C#-tcp-client.sf  C.sf  awk.sf  bash-i.sf  bash-readline.sf  bash-udp.sf  bash196.sf  bash5.sf  busybox-nc.sf  crystal-code.sf  crystal-system.sf  curl.sf  dart.sf  golang.sf  haskell.sf  java-2way.sf  java.sf  java_2.sf  java_3.sf  java_web.sf  javascript.sf  lua.sf  lua_2.sf  nc-c.sf  nc-e.sf  nc-mkfifo.sf  ncat-e.sf  ncat-udp.sf  nodejs.sf  nodejs_2.sf  openssl.sf  perl-no-sh.sf  perl-pentest-monkey.sf  perl.sf  php-exec.sf  php-ivan-sinsek.sf  php-passthru.sf  php-pentest-monkey.sf  php-popen.sf  (+18 more)
src/: main.rs
src/commands/: generate.rs  list.rs
tests/: cli.rs
tests/snapshots/: cli__tests__generate_default.snap  cli__tests__generate_format.snap  cli__tests__generate_format_base64_encoded.snap  cli__tests__generate_format_url_encoded.snap  cli__tests__list.snap
