[package]
name = "shellforge"
version = "1.0.0"
description = "Terminal tool for generating reverse shells for CTF challenges and educational purposes. Easy to use, fast, and safe for practice environments."
license-file = "LICENSE"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
include_dir = "0.7.4"
inline_colorization = "0.1.6"
urlencoding = "2.1.3"

[[bin]]
name = "shellforge"
path = "src/main.rs"
